Got the project working
At this point we are fetching the products from Strapi and showing a Stripe checkout based on the Strapi product price

--- a/anchor.toml
+++ b/anchor.toml
@@ -5,6 +5,6 @@ realm-apid = 'localhost'
 apid = 'francoangulo'
 
 [service]
-apid = 'stripe-test'
+apid = 'gui'
 category = 'javascript'
 cert-style = 'acme'
